# Bpho-computational-physics-entry

./: .gitmodules  CMakeLists.txt
brown-ian-motion/: CMakeLists.txt  README.md
brown-ian-motion/src/: constants.hpp  main.cpp
cmake/: CopyResources.cmake  FetchGLFW.cmake  FetchGlad.cmake  FetchImGui.cmake  FetchImGuiSFML.cmake  FetchJSON.cmake  FetchSFML.cmake  LinkLibraries.cmake
dijohnFinder/: .gitignore  CMakeLists.txt
dijohnFinder/src/: main.cpp
electron_diffraction/shader/: electron_diffraction.frag.glsl
electron_diffraction/src/: constants.hpp  main.cpp  shader.cpp  shader.hpp
hydrogen_spectra/: hydrogen_spectra.R
photo-electric-jud/src/: constants.hpp  main.cpp
photoelectric_effect/: photoelectric_effect.R
planckBlackBodyRadiationSpectrum/: blackBody.R
randomWalk/: CMakeLists.txt  README.md
randomWalk/resources/: presets.json
randomWalk/seed_finder/: Pentagram.txt  main.cpp
randomWalk/src/: main.cpp  presets.hpp
randomWalk/src/util/: lang.cpp  lang.hpp  logger.cpp  logger.hpp  random.hpp  window.cpp  window.hpp
wave_equation/: wave_equation.R
